--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 
     <head>
+        <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     </head>
 
     <body>
+        <!-- This is our AFrame Scene, everything goes inside of this component -->
+        <a-scene>
+        </a-scene>
     </body>
 
 </html>
