--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <!-- This is our AFrame Scene, everything goes inside of this component -->
         <a-scene>
+            <a-box position="0 2 -5"
+                   rotation="45 45 0"
+                   color="blue"></a-box>
         </a-scene>
     </body>
 
