--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <body>
         <!-- This is our AFrame Scene, everything goes inside of this component -->
         <a-scene>
+            <!-- Box -->
             <a-box position="0 2 -5"
                    rotation="45 45 0"
                    color="blue"></a-box>
+
+            <!-- Sky -->
+            <a-sky src="url(/static-assets/sky.jpg)"
+                   phi-start="90"></a-sky>
         </a-scene>
     </body>
 
