--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             <a-sky src="url(/static-assets/sky.jpg)"
                    phi-start="90"></a-sky>
             </a-entity>
+
+            <!-- Camera -->
+            <a-entity camera
+                      look-controls
+                      wasd-controls>
+            </a-entity>
     </body>
 
 </html>
