--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             <a-entity camera
                       look-controls
                       wasd-controls>
+
+                <!-- Cursor -->
+                <a-entity position="0 0 -3"
+                          geometry="primitive: ring; radiusOuter: 0.30;
+                                radiusInner: 0.20;"
+                          material="color: cyan; shader: flat"
+                          cursor="fuse: true">
+                </a-entity>
             </a-entity>
     </body>
 
