--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                                 radiusInner: 0.20;"
                           material="color: cyan; shader: flat"
                           cursor="fuse: true">
+                    <a-animation begin="fusing"
+                                 easing="ease-in"
+                                 attribute="scale"
+                                 fill="forwards"
+                                 from="1 1 1"
+                                 to="0.1 0.1 0.1"
+                                 dur="1500"></a-animation>
                 </a-entity>
             </a-entity>
     </body>
