--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- Cursor -->
                 <a-entity position="0 0 -3"
                           geometry="primitive: ring; radiusOuter: 0.30;
-                                radiusInner: 0.20;"
+                     radiusInner: 0.20;"
                           material="color: cyan; shader: flat"
                           cursor="fuse: true">
                     <a-animation begin="fusing"
@@ -41,6 +41,13 @@
                                  from="1 1 1"
                                  to="0.1 0.1 0.1"
                                  dur="1500"></a-animation>
+                    <a-animation begin="click"
+                                 easing="ease-in"
+                                 attribute="scale"
+                                 fill="backwards"
+                                 from="0.1 0.1 0.1"
+                                 to="1 1 1"
+                                 dur="150"></a-animation>
                 </a-entity>
             </a-entity>
     </body>
