--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <!-- R2D2 -->
             <a-entity position="2 -1 -5"
                       rotation="0 45 0"
+                      sound="src: url(/static-assets/r2d2.mp3); on: click"
                       obj-model="obj: url(/static-assets/r2d2.obj); mtl: url(/static-assets/r2d2.mtl);">
                 <a-animation attribute="rotation"
                              to="0 405 0"
@@ -31,7 +32,7 @@
                 <!-- Cursor -->
                 <a-entity position="0 0 -3"
                           geometry="primitive: ring; radiusOuter: 0.30;
-                     radiusInner: 0.20;"
+                                radiusInner: 0.20;"
                           material="color: cyan; shader: flat"
                           cursor="fuse: true">
                     <a-animation begin="fusing"
